--- a/deneme.ipynb
+++ b/deneme.ipynb
@@ -30,6 +30,37 @@
     "path = os.getcwd()+\"\\\\deneme.ipynb\"\n",
     "print(os.path.dirname(path))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+++++++++++++++\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "################\n"
+     ]
+    }
+   ],
+   "source": [
+    "import threading\n",
+    "\n",
+    "def deneme():\n",
+    "    print(\"################\")\n",
+    "\n",
+    "threading.Timer(interval=10, function=deneme).start()\n",
+    "\n",
+    "print(\"+++++++++++++++\")"
+   ]
   }
  ],
  "metadata": {
