--- a/deneme.ipynb
+++ b/deneme.ipynb
@@ -61,6 +61,28 @@
     "\n",
     "print(\"+++++++++++++++\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'eauy\\xc5\\x9famlyu'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import io\n",
+    "k = str.encode(\"eauyşamlyu\")\n",
+    "k\n"
+   ]
   }
  ],
  "metadata": {
@@ -79,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 | packaged by conda-forge | (main, Mar 30 2022, 08:38:02) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
